--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,26 +3,26 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/StartFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/StartFragment"
         android:name="com.example.madlevel3task2.StartFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_start">
 
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_StartFragment_to_AddPortalFragment"
+            app:destination="@id/AddPortalFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/AddPortalFragment"
         android:name="com.example.madlevel3task2.AddPortalFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_add_portal">
 
         <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
+            android:id="@+id/action_AddPortalFragment_to_StartFragment"
+            app:destination="@id/StartFragment" />
     </fragment>
 </navigation>
