--- a/app/src/main/res/layout/fragment_start.xml
+++ b/app/src/main/res/layout/fragment_start.xml
@@ -7,6 +7,7 @@
     tools:context=".StartFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPortal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="16dp"
